# POC-Agno-RAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  railway.toml
data/: agent_sessions.db
docs/: ARCHITECTURE.md
docs/plans/: 2026-02-20-poc-agno-steel-sales-agents.md  2026-02-20-team-context-fix-design.md  2026-02-20-team-context-fix.md  2026-02-21-avaliacao-gaps-e-documentacao.md  2026-02-24-spreadsheet-rag-and-weight-rules-design.md  2026-02-24-spreadsheet-rag-weight-rules-impl.md
knowledge/catalog_groups/: arame.txt  articulada.txt  barra_laminada.txt  bobina.txt  bobina_slitter.txt  bobininha.txt  ca_50.txt  ca_60.txt  caixilho.txt  chapa_a_36.txt  chapa_plana.txt  fm.txt  lambril.txt  perfil_w.txt  perfis.txt  sucata.txt  tarugo.txt  tela.txt  tela_coluna.txt  telha.txt  trelica.txt  tubo.txt
scripts/: build_knowledge.py  demo_chat.py  generate_catalog_rag.py
src/: agent_os_server.py  api.py  business_rules.py  config.py  crm_integration.py  followup_scheduler.py  knowledge_builder.py  models.py  orchestrator.py
src/agents/: human_handoff_agent.py  product_specialist_agent.py  qualifier_agent.py  quote_generator_agent.py
src/data/: weight_rules.py
tests/: test_api.py  test_business_rules.py  test_business_scenarios.py  test_crm_integration.py  test_followup_scheduler.py  test_human_handoff_agent.py  test_orchestrator.py  test_product_specialist_agent.py  test_qualifier_agent.py  test_quote_generator_agent.py  test_weight_rules.py
