[project]
name = "poc-agno-steel-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.1.1",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "lancedb>=0.13.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
